AWS EC2 instance and Security Group/baston_host_sg.tf
resource "aws_security_group" "baston_host_sg" {
  name   = "baston_subnet_sg"
  vpc_id = aws_vpc.vpc_dev.id
  tags = {
    Name = "baston_subnet_sg"
  }
}

resource "aws_vpc_security_group_ingress_rule" "ssh" {
  security_group_id = aws_security_group.baston_host_sg.id
  from_port         = 22
  to_port           = 22
  cidr_ipv4         = "0.0.0.0/0"
  ip_protocol       = "tcp"
}

resource "aws_vpc_security_group_ingress_rule" "http" {
  security_group_id = aws_security_group.baston_host_sg.id
  from_port         = 80
  to_port           = 80
  cidr_ipv4         = "0.0.0.0/0"
  ip_protocol       = "tcp"
}

resource "aws_vpc_security_group_ingress_rule" "https" {
  security_group_id = aws_security_group.baston_host_sg.id
  from_port         = 443
  to_port           = 443
  cidr_ipv4         = "0.0.0.0/0"
  ip_protocol       = "tcp"
}

resource "aws_vpc_security_group_egress_rule" "All_traffic_public" {
  security_group_id = aws_security_group.baston_host_sg.id
  ip_protocol       = -1
  cidr_ipv4         = "0.0.0.0/0"
}
